--- a/index.html
+++ b/index.html
@@ -1,39 +1,71 @@
 <!doctype html>
-<html lang="en">
+<div lang="en">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/myCss.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+            crossorigin="anonymous"></script>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/progressbar.js"></script>
     <script type="text/javascript" src="js/checkPassword.js"></script>
     <title>Secure Password Creator</title>
+
 </head>
-<div>
-<div class="container"></div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="col">
-    <img src="imgs/home.png" width="60px" height="65px">
-    </div>
-    <div class="col">
-        <a class="navbar-brand" href="#"><h1>Create a Secure Password</h1></a>
-    </div>
-    <div class="col">
-    <img src="imgs/logo.png" width="150px" height="75px">
-    </div>
-</nav>
-    <div class="content-box">
-    <div class="row">
-        <h2>How secure is my password? </h2>
-        <p>A good password contains a variety of letters, numbers and symbols. It should not contain your name or any information that is publicly accessible. Enter your password here to test its' strength.</p>
-    </div>
-        <div id ='pw' class="row">
-            <input type="password" id="pwInput">
-            <button id="send" onclick="getPw()">Check!</button>
+    <nav>
+        <div class="myNav nav-wrapper">
+            <a href="#" class="brand-logo right"> <img src="imgs/logo.png" width="120px" height="60px"></a>
+            <ul class="left">
+                <li><h5>Create a Secure Password</h5></li>
         </div>
-        <div id="results" class="row"></div>
-        <div id="scores" class="row"></div>
+    </nav>
+
+        <div class="container">
+        <div class="row">
+            <h2>How secure is my password? </h2>
+            <p>A good password contains a variety of letters, numbers and symbols. It should not contain your name or any information that is publicly accessible. Enter your password here to test its' strength.</p>
+        </div>
+            <div class="row">
+            <div class="input-field col l6">
+                <input placeholder="******************" id="pwInput" type="password" class="validate">
+                <label for="pwInput">My New Password: </label>
+            </div>
+                <button id="send" onclick="getPw()" class="btn waves-effect waves-light" name="action">Check
+                    <i class="material-icons right">send</i>
+                </button>
+                <!-- Modal Structure -->
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Some Tips For Creating a Secure Password</h4>
+                        </br>
+                        <ol>
+                            <li>Create passwords that are easy to remember but hard for others to guess</li>
+                            </br>
+                            <li>Make the password at least 8 characters long</li>
+                            </br>
+                            <li>Include numbers, capital letters and symbols</li>
+                            </br>
+                            <li>Don’t just use one password</li>
+                            </br>
+                            <li>Never give out your password to anyone</li>
+                        </ol>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">OK!</a>
+                    </div>
+                </div>
+                <button data-target="modal1" class="btn modal-trigger">Tips</button>
+                <div id="circle"></div>
+            <div id="results" class="row"></div>
+            <div id="scores" class="row"></div>
+        </div>
     </div>
 </div>
 </body>
