Added password gen - based off random characters/symbols/numbers with user defined length or two random words, set symbols and a random number

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <a href="#" class="brand-logo right"> <img src="imgs/logo.png" width="120px" height="60px"></a>
             <ul class="left">
                 <li><h5>Create a Secure Password</h5></li>
+                <li class="active"><a href="index.html">Check</a></li>
+                <li><a href="gen.html">Generate</a></li>
+            </ul>
         </div>
     </nav>
 
