--- a/gen.html
+++ b/gen.html
@@ -38,7 +38,7 @@
     <div class="container">
         <div class="row">
             <h2>Generate a secure password</h2>
-            <p>Here you can generate your own secure password. Click the button below to generate a secure password. This password is made up of random letters, numbers and symbols. In order to use passwords like this effectively, you should use a password manager.</p>
+            <p>This password is made up of random letters, numbers and symbols. In order to use passwords like this effectively, you should use a password manager.</p>
         </div>
         <div class="row">
                     <input type="range" id="range" min="10" max="20" />
@@ -52,7 +52,7 @@
 
         <div id="simplepw" class="row">
             <h2>Generate an easy to remember password</h2>
-            <p>Here you can generate your own easy to remember secure password. Click the button below to generate a secure password. This password is made up of two random words seperated by two exclamation points and a random number. These passwords are designe to balance security with ease of recall.</p>
+            <p>This password is made up of two random words seperated by two exclamation points and a random number. These passwords are designe to balance security with ease of recall.</p>
         </div>
         <div class="row">
             <button id="genSimple" onclick="genSimplePw()" class="btn waves-effect waves-light col l12" name="action">Generate
